Add step by step output for DFA, NFA, eNFA and PDA; Add implementation of multiple automata per file input; Remove Basic GUI;